--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 node_modules/
 dist/
 dist-ssr/
+backend-code/
 *.local
 .DS_Store
 *.log
@@ -24,4 +25,5 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
+lerna-debug.log*
 lerna-debug.log*
